--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
 flate2 = "1.0.34"                                # compression
 thiserror = "1.0.38"                             # error handling
+clap = { version = "4.5.21", features = ["derive"] }
