--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 rust-version = "1.80"
 
 [dependencies]
-anyhow = "1.0.68"                                # error handling
+anyhow = { version = "1.0.68", features = ["backtrace"] }                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
-flate2 = "1.0.34"                                # compression
+flate2 = { version = "1.0.17", features = ["zlib"], default-features = false } # compression
 thiserror = "1.0.38"                             # error handling
 clap = { version = "4.5.21", features = ["derive"] }
