--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ bytes = "1.3.0"                                  # helps manage buffers
 flate2 = { version = "1.0.17", features = ["zlib"], default-features = false } # compression
 thiserror = "1.0.38"                             # error handling
 clap = { version = "4.5.21", features = ["derive"] }
+sha1 = "0.10.6"
