commit-tree command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ flate2 = { version = "1.0.17", features = ["zlib"], default-features = false } #
 thiserror = "1.0.38"                             # error handling
 clap = { version = "4.5.21", features = ["derive"] }
 sha1 = "0.10.6"
+chrono = "0.4.38"
